price change and product content change

--- a/src/app/cartpage/cartpage.component.html
+++ b/src/app/cartpage/cartpage.component.html
@@ -31,7 +31,7 @@
                             <tbody>
                                 <tr>
                                     <td class="product-thumbnail">
-                                        <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
+                                        <a href="#"><img src="assets/img/rice/rice-6.jpeg" alt=""></a>
                                     </td>
                                     <td class="product-name"><a href="#">Fortune Rozana Basmati Rice</a></td>
                                     <td class="product-price-cart"><span class="amount">&#8377;329.00</span></td>
@@ -47,7 +47,7 @@
                                 </tr>
                                 <tr>
                                     <td class="product-thumbnail">
-                                        <a href="#"><img src="assets/images/cart/cart-2.jpg" alt=""></a>
+                                        <a href="#"><img src="assets/img/rice/rice-5.jpeg" alt=""></a>
                                     </td>
                                     <td class="product-name"><a href="#">INDIA GATE Basmati Rice</a></td>
                                     <td class="product-price-cart"><span class="amount">&#8377;316.00</span></td>
@@ -63,7 +63,7 @@
                                 </tr>
                                 <tr>
                                     <td class="product-thumbnail">
-                                        <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
+                                        <a href="#"><img src="assets/img/rice/rice-7.jpeg" alt=""></a>
                                     </td>
                                     <td class="product-name"><a href="#">Daawat Biryani Basmati Rice </a></td>
                                     <td class="product-price-cart"><span class="amount">&#8377;169.00</span></td>
