--- a/src/app/compare/compare.component.html
+++ b/src/app/compare/compare.component.html
@@ -23,21 +23,21 @@
                                     <td class="first-column">Product</td>
                                     <td class="product-image-title">
                                         <a href="/product-page" class="image">
-                                            <img class="img-fluid" src="assets/images/product/product-13.jpg" alt="Compare Product">
+                                            <img class="img-fluid" src="assets/img/rice/rice-6.jpeg" alt="Compare Product">
                                         </a>
                                         <a href="#" class="category">Rice</a>
                                         <a href="/product-page" class="title">Fortune Rozana Basmati Rice</a>
                                     </td>
                                     <td class="product-image-title">
                                         <a href="/product-page" class="image">
-                                            <img class="img-fluid" src="assets/images/product/product-14.jpg" alt="Compare Product">
+                                            <img class="img-fluid" src="assets/img/rice/rice-5.jpeg" alt="Compare Product">
                                         </a>
                                         <a href="#" class="category">Rice </a>
                                         <a href="/product-page" class="title">INDIA GATE Basmati Rice</a>
                                     </td>
                                     <td class="product-image-title">
                                         <a href="/product-page" class="image">
-                                            <img class="img-fluid" src="assets/images/product/product-15.jpg" alt="Compare Product">
+                                            <img class="img-fluid" src="assets/img/rice/rice-7.jpeg" alt="Compare Product">
                                         </a>
                                         <a href="#" class="category">Rice</a>
                                         <a href="/product-page" class="title">Daawat Biryani Basmati Rice</a>
