--- a/src/app/myaccount/myaccount.component.html
+++ b/src/app/myaccount/myaccount.component.html
@@ -41,7 +41,7 @@
                                     <div class="myaccount-content">
                                         <h3>Dashboard</h3>
                                         <div class="welcome">
-                                            <p>Hello, <strong>Alex Tuntuni</strong> (If Not <strong>Tuntuni !</strong><a href="login-register.html" class="logout"> Logout</a>)</p>
+                                            <p>Hello, <strong>Yash</strong> (If Not <strong>Yash !</strong><a href="login-register.html" class="logout"> Logout</a>)</p>
                                         </div>
 
                                         <p class="mb-0">From your account dashboard. you can easily check & view your recent orders, manage your shipping and billing addresses and edit your password and account details.</p>
@@ -66,23 +66,23 @@
                                                 <tbody>
                                                     <tr>
                                                         <td>1</td>
-                                                        <td>Aug 22, 2018</td>
-                                                        <td>Pending</td>
-                                                        <td>$3000</td>
+                                                        <td>june 18, 2021</td>
+                                                        <td>Approved</td>
+                                                        <td>&#8377;329</td>
                                                         <td><a href="/cartpage" class="check-btn sqr-btn ">View</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>2</td>
-                                                        <td>July 22, 2018</td>
+                                                        <td>June 22, 2021</td>
                                                         <td>Approved</td>
-                                                        <td>$200</td>
+                                                        <td>&#8377;316</td>
                                                         <td><a href="/cartpage" class="check-btn sqr-btn ">View</a></td>
                                                     </tr>
                                                     <tr>
                                                         <td>3</td>
-                                                        <td>June 12, 2017</td>
-                                                        <td>On Hold</td>
-                                                        <td>$990</td>
+                                                        <td>July 12, 2021</td>
+                                                        <td>Approved</td>
+                                                        <td>&#8377;169</td>
                                                         <td><a href="/cartpage" class="check-btn sqr-btn ">View</a></td>
                                                     </tr>
                                                 </tbody>
@@ -107,14 +107,14 @@
                                                 </thead>
                                                 <tbody>
                                                     <tr>
-                                                        <td>Haven - Free Real Estate PSD Template</td>
-                                                        <td>Aug 22, 2018</td>
+                                                        <td>INDIA GATE Basmati Rice</td>
+                                                        <td>June 18, 2021</td>
                                                         <td>Yes</td>
                                                         <td><a href="#" class="check-btn sqr-btn "><i class="fa fa-cloud-download"></i> Download File</a></td>
                                                     </tr>
                                                     <tr>
-                                                        <td>HasTech - Profolio Business Template</td>
-                                                        <td>Sep 12, 2018</td>
+                                                        <td>Fortune Rozana Basmati Rice</td>
+                                                        <td>June 22, 2021</td>
                                                         <td>Never</td>
                                                         <td><a href="#" class="check-btn sqr-btn "><i class="fa fa-cloud-download"></i> Download File</a></td>
                                                     </tr>
@@ -137,10 +137,10 @@
                                     <div class="myaccount-content">
                                         <h3>Billing Address</h3>
                                         <address>
-                                            <p><strong>Alex Tuntuni</strong></p>
-                                            <p>1355 Market St, Suite 900 <br>
-                                        San Francisco, CA 94103</p>
-                                            <p>Mobile: (123) 456-7890</p>
+                                            <p><strong>Yash</strong></p>
+                                            <p>#164,Astalakshmi nagar <br>
+                                            Allapakkam,chennai-600116</p>
+                                            <p>Mobile: (91) 6379205857</p>
                                         </address>
                                         <a href="#" class="check-btn sqr-btn "><i class="fa fa-edit"></i> Edit Address</a>
                                     </div>
