--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -106,8 +106,8 @@
                     </div>
                     <p>India Gate Classic Basmati Rice is an exotic new class of Basmati which is aged for 2 years. India Gate Classic Basmati Rice has a delectable taste that lets you relish special moments in life. Apart from the delicious taste, it is defined by its delicate aroma and smooth pearl white grains that are extra fine and long - all attributes of a true Basmati. </p>
                     <div class="pro-details-price">
-                        <span class="new-price">$75.72</span>
-                        <span class="old-price">$95.72</span>
+                        <span class="new-price">&#8377;316.00</span>
+                        <span class="old-price">&#8377;400.00</span>
                     </div>
                     
                     <div class="pro-details-size">
@@ -325,13 +325,13 @@
                                 <i class="icon_star"></i>
                                 <i class="icon_star"></i>
                                 <i class="icon_star"></i>
-                                <i class="icon_star gray"></i>
+                                <i class="icon_star "></i>
                             </div>
-                            <span>(2)</span>
+                            <span>(5)</span>
                         </div>
-                        <h3><a href="/product-page">Basic Joggin Shorts</a></h3>
+                        <h3><a href="/product-page">INDIA GATE Basmati Rice</a></h3>
                         <div class="product-price-2">
-                            <span>$20.50</span>
+                            <span>&#8377;400.00</span>
                         </div>
                     </div>
                     <div class="product-content-wrap-2 product-content-position text-center">
@@ -341,13 +341,13 @@
                                 <i class="icon_star"></i>
                                 <i class="icon_star"></i>
                                 <i class="icon_star"></i>
-                                <i class="icon_star gray"></i>
+                                <i class="icon_star "></i>
                             </div>
-                            <span>(2)</span>
+                            <span>(5)</span>
                         </div>
-                        <h3><a href="/product-page">Basic Joggin Shorts</a></h3>
+                        <h3><a href="/product-page">INDIA GATE Basmati Rice</a></h3>
                         <div class="product-price-2">
-                            <span>$20.50</span>
+                            <span>&#8377;400.00</span>
                         </div>
                         <div class="pro-add-to-cart">
                             <button title="Add to Cart">Add To Cart</button>
@@ -363,7 +363,7 @@
                         <a href="/product-page">
                             <img src="assets/img/rice/rice-2.jpeg" alt="">
                         </a>
-                        <span class="pro-badge left bg-red">-20%</span>
+                        <span class="pro-badge left bg-red"></span>
                         <div class="product-action-2 tooltip-style-2">
                             <button title="Wishlist"><i class="icon-heart"></i></button>
                             <button title="Quick View" data-toggle="modal" data-target="#exampleModal"><i class="icon-size-fullscreen icons"></i></button>
@@ -379,12 +379,12 @@
                                 <i class="icon_star"></i>
                                 <i class="icon_star gray"></i>
                             </div>
-                            <span>(2)</span>
+                            <span>(4)</span>
                         </div>
-                        <h3><a href="/product-page">Make Thing Happen T-Shirt</a></h3>
+                        <h3><a href="/product-page">Fortune Rozana Basmati Rice</a></h3>
                         <div class="product-price-2">
-                            <span class="new-price">$35.45</span>
-                            <span class="old-price">$45.80</span>
+                            <span class="new-price">&#8377;329.00</span>
+                            <span class="old-price">&#8377;429.00</span>
                         </div>
                     </div>
                     <div class="product-content-wrap-2 product-content-position text-center">
@@ -396,12 +396,12 @@
                                 <i class="icon_star"></i>
                                 <i class="icon_star gray"></i>
                             </div>
-                            <span>(2)</span>
+                            <span>(4)</span>
                         </div>
-                        <h3><a href="/product-page">Make Thing Happen T-Shirt</a></h3>
+                        <h3><a href="/product-page">Fortune Rozana Basmati Rice</a></h3>
                         <div class="product-price-2">
-                            <span class="new-price">$35.45</span>
-                            <span class="old-price">$45.80</span>
+                            <span class="new-price">&#8377;329.00</span>
+                            <span class="old-price">&#8377;429.00</span>
                         </div>
                         <div class="pro-add-to-cart">
                             <button title="Add to Cart">Add To Cart</button>
@@ -432,27 +432,27 @@
                                 <i class="icon_star"></i>
                                 <i class="icon_star gray"></i>
                             </div>
-                            <span>(2)</span>
+                            <span>(4)</span>
                         </div>
-                        <h3><a href="/product-page">Basic White Simple Sneaker</a></h3>
+                        <h3><a href="/product-page">Charminar long grain rice</a></h3>
                         <div class="product-price-2">
-                            <span>$35.45</span>
+                            <span>&#8377;260.00</span>
                         </div>
                     </div>
                     <div class="product-content-wrap-2 product-content-position text-center">
                         <div class="product-rating-wrap">
                             <div class="product-rating">
-                                <i class="bi bi-star"></i>
-                                <i class="bi bi-star"></i>
-                                <i class="bi bi-star"></i>
-                                <i class="bi bi-star"></i>
-                                <i class="bi bi-star grey"></i>
+                                <i class="icon_star"></i>
+                                <i class="icon_star"></i>
+                                <i class="icon_star"></i>
+                                <i class="icon_star"></i>
+                                <i class="icon_star gray"></i>
                             </div>
-                            <span>(2)</span>
+                            <span>(4)</span>
                         </div>
-                        <h3><a href="/product-page">Basic White Simple Sneaker</a></h3>
+                        <h3><a href="/product-page">Charminar long grain rice</a></h3>
                         <div class="product-price-2">
-                            <span>$35.45</span>
+                            <span>&#8377;260.00</span>
                         </div>
                         <div class="pro-add-to-cart">
                             <button title="Add to Cart">Add To Cart</button>
@@ -468,7 +468,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
+<!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -585,5 +585,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Modal end -->
