--- a/src/app/shop-page/shop-page.component.html
+++ b/src/app/shop-page/shop-page.component.html
@@ -6,7 +6,7 @@
                 <li>
                     <a href="index.html">Home</a>
                 </li>
-                <li class="active">Shop Right Sidebar</li>
+                <li class="active">shop page</li>
             </ul>
         </div>
     </div>
