--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -12,7 +12,7 @@
 </div>
 <div class="cart-main-area pt-115 pb-120">
     <div class="container">
-        <h3 class="cart-page-title">Your cart items</h3>
+        <h3 class="cart-page-title">Your Wishlist</h3>
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                 <form action="#">
@@ -31,50 +31,50 @@
                             <tbody>
                                 <tr>
                                     <td class="product-thumbnail">
-                                        <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
+                                        <a href="#"><img src="assets/img/rice/rice-5.jpeg" alt=""></a>
                                     </td>
-                                    <td class="product-name"><a href="#">Simple Black T-Shirt</a></td>
-                                    <td class="product-price-cart"><span class="amount">$260.00</span></td>
+                                    <td class="product-name"><a href="#">INDIA GATE Basmati Rice</a></td>
+                                    <td class="product-price-cart"><span class="amount">&#8377;316.00</span></td>
                                     <td class="product-quantity pro-details-quality">
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1">
                                         </div>
                                     </td>
-                                    <td class="product-subtotal">$110.00</td>
+                                    <td class="product-subtotal">&#8377;316.00</td>
                                     <td class="product-wishlist-cart">
-                                        <a href="#">add to cart</a>
+                                        <a href="/cartpage">add to cart</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="product-thumbnail">
-                                        <a href="#"><img src="assets/images/cart/cart-2.jpg" alt=""></a>
+                                        <a href="#"><img src="assets/img/rice/rice-7.jpeg" alt=""></a>
                                     </td>
-                                    <td class="product-name"><a href="#">Norda Simple Backpack</a></td>
-                                    <td class="product-price-cart"><span class="amount">$150.00</span></td>
+                                    <td class="product-name"><a href="#">Daawat Biryani Basmati Rice</a></td>
+                                    <td class="product-price-cart"><span class="amount">&#8377;169.00</span></td>
                                     <td class="product-quantity pro-details-quality">
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="1">
                                         </div>
                                     </td>
-                                    <td class="product-subtotal">$150.00</td>
+                                    <td class="product-subtotal">&#8377;169.00</td>
                                     <td class="product-wishlist-cart">
-                                        <a href="#">add to cart</a>
+                                        <a href="/cartpage">add to cart</a>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="product-thumbnail">
-                                        <a href="#"><img src="assets/images/cart/cart-1.jpg" alt=""></a>
+                                        <a href="#"><img src="assets/img/rice/rice-6.jpeg" alt=""></a>
                                     </td>
-                                    <td class="product-name"><a href="#">Simple Black T-Shirt </a></td>
-                                    <td class="product-price-cart"><span class="amount">$170.00</span></td>
+                                    <td class="product-name"><a href="#">Fortune Rozana Basmati Rice </a></td>
+                                    <td class="product-price-cart"><span class="amount">&#8377;329.00</span></td>
                                     <td class="product-quantity pro-details-quality">
                                         <div class="cart-plus-minus">
                                             <input class="cart-plus-minus-box" type="text" name="qtybutton" value="2">
                                         </div>
                                     </td>
-                                    <td class="product-subtotal">$170.00</td>
+                                    <td class="product-subtotal">&#8377;329.00</td>
                                     <td class="product-wishlist-cart">
-                                        <a href="#">add to cart</a>
+                                        <a href="/cartpage">add to cart</a>
                                     </td>
                                 </tr>
                             </tbody>
@@ -86,7 +86,7 @@
     </div>
 </div>
  <!-- Modal -->
- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
+ <!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -203,5 +203,5 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!-- Modal end -->
